# asciify-cpp

./: .gitignore  CMakeLists.txt  README.md  output.txt
include/asciify/: ascii_mapper.hpp  image_loader.hpp
src/: ascii_mapper.cpp  image_loader.cpp  main  main.cpp
